--- a/style.css
+++ b/style.css
@@ -42,3 +42,15 @@ body {
   background-color: #F0ECE0
 }
 
+a:link {
+  color: #334933;
+}
+
+a:visited {
+  color: #334933;
+}
+
+a:hover {
+  color: blue;
+}
+
