--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
+@import url(https://fonts.googleapis.com/css?family=Kaushan+Script);
 
 body {
   background-color: #6aaf6a;
@@ -8,6 +9,7 @@ body {
  
 #heading {
   font-size: 1.5em;
+  font-family: 'Kaushan Script';
  }
  
 #hotbar {
@@ -29,7 +31,7 @@ body {
 }
 
 #column3 {
-  font-size: 4em;
+  font-size: 3.5em;
 }
 
 #link {
@@ -52,5 +54,12 @@ a:visited {
 
 a:hover {
   color: blue;
+}
+
+.logo {
+	border-color: black;
+	border-width: 4px;
+    border-radius: 15px;
+	border-style: solid;
 }
 
