control panel and css
freecodecamp is still my savior
also i added the control panel finally

--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ a:hover {
 	border-style: solid;
 }
 
+#dashboard {
+  background-color: #F5FFFA;
+}
+
+#settings {
+  background-color: #F8F8FF;
+}
+
