--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
 @import url(https://fonts.googleapis.com/css?family=Kaushan+Script);
 
+@media (min-width:320px) { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px) { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
 body {
   background-color: #6aaf6a;
   font-family: 'Roboto Slab', serif;
@@ -71,3 +77,10 @@ a:hover {
   background-color: #F8F8FF;
 }
 
+#aboutmain {
+  background-color: #F0FFF0
+}
+
+#ratings {
+  background-color: #FFFFF0;
+}
